# anchor-symbolic-alpha

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: backtest.yaml  data.yaml  default.yaml  grammar.yaml  reward.yaml  route_b_data.yaml  route_b_liquid1000.yaml  route_b_micro_smoke.yaml  route_b_panel.yaml  route_b_smoke.yaml  route_b_subset.yaml  training.yaml  training_anchor_smoke.yaml  training_route_b_smoke.yaml  us_equities_data.yaml  us_equities_liquid1000.yaml  us_equities_liquid50.yaml  us_equities_liquid500.yaml  us_equities_panel.yaml  us_equities_smoke.yaml
docs/: chinese_report_draft.md  chinese_report_full_text.txt  chinese_report_word.docx  data_setup.md  experiment_log.md  literature_map.md  neurips_method_pivot.md  paper_direction.md  project_evolution_history.md  repository_structure.md  required_data.md  route_b_access_status.md  route_b_data.md  route_b_experiment_log.md  route_b_paper_direction.md  route_b_required_data.md  selector_theory_note.md  training_runbook.md
experiments/: common.py  run_ablation.py  run_anchor_train.py  run_backtest.py  run_multiseed.py  run_pretrain.py  run_route_b_train.py  run_train.py  run_transfer.py
knowledge_guided_symbolic_alpha/: __init__.py
scripts/: build_benchmark_front_diagnostics.py  build_benchmark_pareto_plot_data.py  build_chinese_report_figures.py  build_chinese_report_tables.py  build_finance_conditional_diagnostics.py  build_finance_mcs_shortlist.py  build_finance_near_neighbor_diagnostics.py  build_finance_pareto_front_diagnostics.py  build_finance_sparse_signal_diagnostics.py  (+34 more)
(+166 files in other folders)
