[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-guided-symbolic-alpha"
version = "0.1.0"
description = "Knowledge-guided symbolic alpha discovery."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "PyYAML",
  "torch",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
