[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-guided-symbolic-alpha"
version = "0.1.0"
description = "Knowledge-guided symbolic alpha discovery."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "PyYAML",
  "scikit-learn",
  "statsmodels",
]

[project.optional-dependencies]
train = [
  "torch",
]
eval = [
  "duckdb",
  "pyarrow",
]
research = [
  "shap",
  "pysr",
]
wrds = [
  "pg8000",
  "pyarrow",
]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not eval and not train and not wrds'"
markers = [
  "eval: tests that require the evaluation stack such as duckdb or parquet readers",
  "train: tests that require a healthy torch runtime",
  "wrds: tests that require WRDS credentials or client dependencies",
]

[tool.setuptools.packages.find]
include = ["knowledge_guided_symbolic_alpha*"]
